--- a/package.json
+++ b/package.json
@@ -6,9 +6,24 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.22.0",
+    "bootstrap": "^5.1.3",
+    "config": "^3.3.6",
+    "datatables.net": "^1.11.3",
+    "datatables.net-buttons": "^2.0.1",
+    "datatables.net-dt": "^1.11.3",
+    "joi": "^17.4.2",
+    "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
+    "mdb-react-ui-kit": "^1.4.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^17.0.2",
+    "react-lodash": "^0.1.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
